Unyielding transaction participant resources should fail if resources not stashed

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc11
    • Affects Version/s: None
    • Component/s: None
    • None
    • Cluster Scalability
    • Fully Compatible
    • ALL
    • v8.0
    • Cluster Scalability 2024-07-08
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When a transaction participant yields its resources to act as a sub-router, its possible for another txn request to execute and fail while the resources are yielded. If this happens, unyielding the transaction participant resources should fail.

            Assignee:
            Janna Golden (Inactive)
            Reporter:
            Janna Golden (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: