src/mongo/db/service_entry_point_shard_role.cpp
@@ -1034,11 +1034,6 @@ void CheckoutSessionAndInvokeCommand::_checkOutSession() {
             }
         }
 
-        if (opCtx->isStartingMultiDocumentTransaction()) {
-            service_entry_point_shard_role_helpers::waitForReadConcern(
-                opCtx, _ecd->getInvocation(), execContext.getRequest());
-        }
-
         // Release the transaction lock resources and abort storage transaction for unprepared
         // transactions on failure to unstash the transaction resources to opCtx. We don't want
         // to have this error guard for beginOrContinue as it can abort the transaction for any
@@ -1051,6 +1046,11 @@ void CheckoutSessionAndInvokeCommand::_checkOutSession() {
                 txnParticipant.abortTransaction(opCtx);
             }
         });
+
+        if (opCtx->isStartingMultiDocumentTransaction()) {
+            service_entry_point_shard_role_helpers::waitForReadConcern(
+                opCtx, _ecd->getInvocation(), execContext.getRequest());
+        }
 
         txnParticipant.unstashTransactionResources(opCtx, invocation->definition()->getName());
 
